--- a/src/styles/form/index.css
+++ b/src/styles/form/index.css
@@ -2,6 +2,8 @@
   display: grid;
   justify-content: center;
   margin-top: 120px;
+  margin-bottom: 130px;
+  padding: 0 10px 0 10px;
   }
   .containerFatherForm h2 {
     font-family: "Cera Pro";
@@ -34,7 +36,7 @@
     background: #ffffff;
     box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.05), 1px 4px 6px rgba(0, 0, 0, 0.08);
     border-radius: 4px;
-    padding: 2.5rem;
+    padding: 2rem;
     margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
