--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,11 +4,15 @@
   box-sizing: border-box;
 }
 
+
+
 html,body{
   margin: 0;
   padding: 0;
   background-color: #F3F2F2;
 }
+
+html, img, video, iframe { filter: invert(1) hue-rotate(180deg) }
 
 .App {
   text-align: center;
