--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -51,16 +51,16 @@ html, img, video, iframe { filter: invert(1) hue-rotate(180deg) }
   }
 }
 
-.containerCartaPrincipal{
+/* .containerCartaPrincipal{
   display: grid;
   gap: 1rem;
   margin: 0px 110px;
   justify-content: center;
   grid-template-columns: repeat(3, minmax(400px, 350px));
   margin-bottom: 80px;
-}
+} */
 
-.contanedorimagen_carta{
+/* .contanedorimagen_carta{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -69,8 +69,8 @@ html, img, video, iframe { filter: invert(1) hue-rotate(180deg) }
   max-width: 380px;
   width: 100%;
   height: 210px;
-}
-@media screen and (max-width:1279px){
+} */
+/* @media screen and (max-width:1279px){
   .containerCartaPrincipal{
     grid-template-columns: repeat(3, minmax(300px, 1fr));
     margin:0px 15px;
@@ -79,14 +79,14 @@ html, img, video, iframe { filter: invert(1) hue-rotate(180deg) }
   .inputSearch{
 margin-top: 17px;
   }
-} 
+}  */
 
-@media screen and (max-width:968px){
+/* @media screen and (max-width:968px){
   .containerCartaPrincipal{
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   }
-}
-@media screen and (max-width:525px){
+} */
+/* @media screen and (max-width:525px){
   .containerCartaPrincipal{
     margin:0px 20px;
     margin-bottom: 130px;
@@ -99,10 +99,5 @@ margin-top: 17px;
     height: 110px;
     width: 110px;
   }
-} 
+}  */
 
-.backgroundImgCat{
-  background-color: #E9F3F5;
-  border-radius: 50%;
-  
-}
