--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,14 +1,19 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html,body{
+html,
+body {
   margin: 0;
   padding: 0;
-  background-color: #F3F2F2;
+  background-color: #f3f2f2;
 }
 
-/*  html, img, video, iframe { filter: invert(1) hue-rotate(180deg) }  */
-
+html,
+img,
+video,
+iframe {
+  filter: invert(1) hue-rotate(180deg);
+}
