--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,9 +11,10 @@ body {
   background-color: #f3f2f2;
 }
 
-html,
+/* html,
 img,
 video,
 iframe {
   filter: invert(1) hue-rotate(180deg);
 }
+ */
